--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,20 +3,8 @@
   margin: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.intro-text {
+  max-width: 1000px;
 }
 
 .results {
